# Wayland

./: Cargo.toml  README.md
c_wayland/: Cargo.toml  build.rs
c_wayland-client/: Cargo.toml  build.rs
c_wayland-client/src/: lib.rs
c_wayland/src/: client.rs  lib.rs
wayland/: Cargo.toml
wayland-client/: Cargo.toml
wayland-client/src/: connection.rs  lib.rs
wayland-scanner/: Cargo.toml
wayland-scanner/src/: data.rs  generator.rs  lib.rs  parser.rs
wayland-scanner/src/generator/: client.rs  mod.rs
wayland-util/: Cargo.toml
wayland-util/src/: lib.rs  map.rs  protocol.rs  socket.rs  wire.rs
wayland/src/: lib.rs  protocol.rs
wayland/src/client/: mod.rs
wayland/src/client/c/: mod.rs
