[package]
name = "wayland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wayland-util = {path = "../wayland-util" }
c_wayland = { path  = "../c_wayland"  , features = ["client" , "server"] }

[features]
client = [ ]
server = [ ]

[build-dependencies]
wayland-scanner = {path ="../wayland-scanner"}