[package]
name = "wayland"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#libc = []
c_wayland = { path  = "../c_wayland"  , features = ["client" , "server"] }

[features]
client = [ ]
server = [ ]
sys = [ ]

[build-dependencies]
wayland-scanner = {path ="../wayland-scanner"}